# Keyhole

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  config.dev.toml  deny.toml  docker-compose.yml  flake.nix  justfile  release.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
docs/: linux-distribution-plan.md
docs-site/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
docs-site/src/components/: CodeBlock.astro  DocsLayout.astro  Note.astro
docs-site/src/content/docs/: index.mdx
docs-site/src/content/docs/guides/: brokers.md  installation.md  quick-start.md  recording.md
docs-site/src/lib/: install.ts  keybindings.ts  nav.ts  search.ts
docs-site/src/pages/: config.astro  connecting.astro  index.astro  keybindings.astro  keyspace.astro  palette.astro  quickstart.astro  recording.astro  tails.astro
docs-site/test/: install.test.ts  keybindings.test.ts  nav.test.ts  search.test.ts
docs/plans/: keyhole-cleanup-plan.md  keyhole-code-review.md
packaging/: README.md
packaging/aur/keyhole/: .SRCINFO  PKGBUILD
packaging/aur/keyhole-bin/: .SRCINFO  PKGBUILD
packaging/homebrew/: keyhole.rb
scripts/: freeze_poster.py  gen_packaging.sh  install.sh  lint.sh  record_demo.sh  test.sh  test_cast_tools.py  test_install.sh  test_packaging.sh  tui_smoke.py
scripts/demos/: keyhole-demo.cast
scripts/lib/: srcinfo.sh
src/: app.rs  broker.rs  cli.rs  config.rs  event.rs  logging.rs  main.rs  recording.rs  theme.rs  tui.rs  ui.rs
src/app/: action.rs  command.rs  connection.rs  console.rs  events.rs  input.rs  mod.rs  realtime.rs  recordings.rs  settings.rs  state.rs  tests.rs
src/app/tests/: amqp.rs  browser.rs  connection.rs  console.rs  forms.rs  mod.rs  navigation.rs  notifications.rs  pure_helpers.rs  realtime.rs  recordings.rs
src/broker/: actor.rs  amqp.rs  factory.rs  jolokia.rs  mod.rs  rabbitmq.rs  redis.rs
src/broker/amqp/: mod.rs
src/broker/redis/: command.rs  info.rs  mod.rs  tail.rs  value.rs
src/config/: mod.rs  secret.rs
src/dev/: amqp.rs  fixtures.rs  mod.rs  rabbitmq.rs  redis.rs
src/recording/: mod.rs
src/snapshots/: brokertui__ui__tests__browser_with_console.snap  brokertui__ui__tests__browser_with_stats.snap  brokertui__ui__tests__command_palette.snap  brokertui__ui__tests__connections_empty.snap  brokertui__ui__tests__connections_populated.snap  brokertui__ui__tests__console_with_output.snap  brokertui__ui__tests__dashboard.snap  brokertui__ui__tests__help_overlay.snap  brokertui__ui__tests__realtime_keyspace_notice.snap  keyhole__ui__tests__browser_amqp.snap  keyhole__ui__tests__browser_amqp_message_detail.snap  keyhole__ui__tests__browser_amqp_message_preview.snap  keyhole__ui__tests__browser_panel_keyspace_notice.snap  keyhole__ui__tests__browser_panel_keyspace_notice.snap.new  keyhole__ui__tests__browser_panel_tail_recording.snap  keyhole__ui__tests__browser_panel_tail_recording.snap.new  keyhole__ui__tests__browser_server_details.snap  keyhole__ui__tests__browser_server_details.snap.new  keyhole__ui__tests__browser_with_console.snap  keyhole__ui__tests__browser_with_console.snap.new  keyhole__ui__tests__browser_with_stats.snap  keyhole__ui__tests__browser_with_stats.snap.new  keyhole__ui__tests__command_palette.snap  keyhole__ui__tests__connections_empty.snap  keyhole__ui__tests__connections_populated.snap  keyhole__ui__tests__help_overlay.snap  keyhole__ui__tests__help_overlay.snap.new  keyhole__ui__tests__realtime_keyspace_notice.snap  keyhole__ui__tests__realtime_tail_recording.snap  keyhole__ui__tests__recordings_tab.snap  keyhole__ui__tests__settings_overlay.snap
src/ui/: anim.rs  mod.rs  theme.rs  views.rs
src/ui/snapshots/: brokertui__ui__tests__command_palette.snap  brokertui__ui__tests__connections_empty.snap  brokertui__ui__tests__console_with_output.snap  brokertui__ui__tests__dashboard.snap  brokertui__ui__tests__help_overlay.snap  brokertui__ui__tests__realtime_keyspace_notice.snap
src/ui/views/: mod.rs
website/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
website/public/: _redirects
website/src/components/: KeyholeTui.astro
website/src/lib/: capabilities.ts  install.ts  tui-demo.ts
website/src/pages/: index.astro
website/test/: capabilities.test.ts  install.test.ts  tui-demo.test.ts
