[package]
name = "brokertui"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "A terminal UI to connect to message/data brokers (Redis, AMQP), browse data, watch realtime activity, and record live streams to disk."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["tui", "redis", "amqp", "broker", "terminal"]
categories = ["command-line-utilities", "database"]

[dependencies]
# --- async runtime ---
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }   # CancellationToken + TaskTracker
futures-util = "0.3"
async-trait = "0.1"

# --- terminal UI ---
ratatui = "0.30"
# crossterm is re-exported by ratatui; we depend on the SAME minor (0.29) only to
# enable `event-stream` (async input). Cargo unifies the feature onto ratatui's copy.
crossterm = { version = "0.29", features = ["event-stream"] }
tui-tree-widget = "0.24"   # sidebar connection/keyspace tree
tui-input = "0.15"         # single-line fields for the connection form modal

# --- Redis client (v1 broker) ---
redis = { version = "1.2", features = ["tokio-comp", "connection-manager", "streams"] }

# --- config & secrets ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.25"          # comment-preserving writes for in-app profile edits
directories = "6"           # XDG config/data dirs
keyring = { version = "4", optional = true }   # default backend = pure-Rust zbus secret-service

# --- errors / logging / cli / time / bytes ---
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"    # file-only logging (TUI owns the terminal)
clap = { version = "4", features = ["derive"] }
# `serde-well-known` provides the RFC 3339 (de)serializers for recording timestamps.
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known", "macros"] }
base64 = "0.22"
bytes = "1"
percent-encoding = "2.3.2"

[features]
default = ["keyring"]
# OS keyring support. Disable for headless/musl builds (env-var secrets only):
#   cargo build --no-default-features
keyring = ["dep:keyring"]
# Gate integration tests that require a live broker (e.g. dockerized Redis).
integration = []

[profile.release]
strip = true
