[package]
name = "keyhole"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
authors = ["Alex Kasapis <akasapis@trigonongroup.com>"]
description = "A terminal UI to connect to message/data brokers (Redis, AMQP), browse data, watch realtime activity, and record live streams to disk."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AlexKasapis/Keyhole"
homepage = "https://github.com/AlexKasapis/Keyhole"
documentation = "https://github.com/AlexKasapis/Keyhole"
keywords = ["tui", "redis", "amqp", "broker", "terminal"]
categories = ["command-line-utilities", "database"]
# Keep the published crate slim: ship sources, README, licenses, and CHANGELOG,
# but drop dev-only tooling that the build/install path never needs.
exclude = [
    ".github/",
    "docs/",
    "scripts/",
    "docker-compose.yml",
    "justfile",
    "release.toml",
]

[dependencies]
# --- async runtime ---
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }   # CancellationToken + TaskTracker
futures-util = "0.3"
async-trait = "0.1"

# --- terminal UI ---
ratatui = "0.30"
# crossterm is re-exported by ratatui; we depend on the SAME minor (0.29) only to
# enable `event-stream` (async input). Cargo unifies the feature onto ratatui's copy.
crossterm = { version = "0.29", features = ["event-stream"] }
tui-tree-widget = "0.24"   # sidebar connection/keyspace tree
tui-input = "0.15"         # single-line fields for the connection form modal
unicode-width = "0.2"      # display-width-aware column truncation/padding

# --- Redis client (v1 broker) ---
redis = { version = "1.2", features = ["tokio-comp", "connection-manager", "streams"] }

# --- config & secrets ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.25"          # comment-preserving writes for in-app profile edits
directories = "6"           # XDG config/data dirs
keyring = { version = "4", optional = true }   # default backend = pure-Rust zbus secret-service

# --- errors / logging / cli / time / bytes ---
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"    # file-only logging (TUI owns the terminal)
clap = { version = "4", features = ["derive"] }
# Generate the man page and shell completions from the clap `Command` via the
# hidden `keyhole gen` subcommand (consumed by the .deb/.rpm/AUR/Homebrew/Nix
# packaging in later tiers). Both are small and introspect the live CLI, so the
# artifacts can never drift from the actual flags.
clap_complete = "4"
clap_mangen = "0.2"
# `serde-well-known` provides the RFC 3339 (de)serializers for recording timestamps.
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known", "macros"] }
base64 = "0.22"
bytes = "1"
percent-encoding = "2.3.2"
# AMQP 1.0 client (Phase 4): ActiveMQ / Amazon MQ / RabbitMQ-4.x. `rustls`
# enables `amqps://` for Amazon MQ's TLS endpoint (:5671). Optional so the
# minimal headless/musl build can drop it (and its TLS-crypto C dependencies).
fe2o3-amqp = { version = "0.15.1", features = ["rustls"], optional = true }
# AMQP 0.9.1 client (Phase 5): RabbitMQ (all versions). lapin's default features
# are `rustls` + `default-runtime` (= tokio), so it binds to the app's existing
# tokio runtime out of the box (`ConnectionProperties::default()`) and speaks
# `amqps://` over rustls — no extra executor/reactor shims, no OpenSSL. Optional,
# so the minimal headless/musl build drops it like the AMQP 1.0 stack.
lapin = { version = "4", optional = true }

[dev-dependencies]
# Snapshot testing of rendered TUI frames (see src/ui — snapshot module).
insta = "1"

[features]
default = ["keyring", "amqp", "rabbitmq"]
# OS keyring support. Disable for headless/musl builds (env-var secrets only):
#   cargo build --no-default-features
keyring = ["dep:keyring"]
# AMQP 1.0 broker support (Redis is always built in). Off in the minimal
# headless/musl build, whose rustls/aws-lc TLS stack is awkward to link static.
amqp = ["dep:fe2o3-amqp"]
# RabbitMQ (AMQP 0.9.1) broker support, via lapin bound to the tokio runtime.
# Off in the minimal headless/musl build for the same TLS-linking reason as AMQP.
rabbitmq = ["dep:lapin"]
# Gate integration tests that require a live broker (e.g. dockerized Redis).
integration = []

[profile.release]
strip = true
